Add again to existing project files to Git
